--- a/_data/footer-nav.yml
+++ b/_data/footer-nav.yml
@@ -1,10 +1,7 @@
-- title: About
-  url: '/about/'
-  internal: true
 - title: Demo FAQ
   url: '/faq/'
   internal: true
 - title: Github Repo
   url: 'https://github.com/grnet/synnefo/'
-- title: Download Live CD
-  url: 'http://www.synnefo.org/redirect/livecd.iso'
+- title: Documentation
+  url: 'https://www.synnefo.org/docs/synnefo/latest/index.html'
