--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,14 @@ title: Synnefo
 description: "Synnefo is open source cloud software used to create massively scalable IaaS clouds."
 keywords: "cloud software, cloud platform, commodity hardware, large scale, Ganeti, OpenStack, production quality, production ready, okeanos, IaaS" 
 baseurl: ""
+
 url: "https://www.synnefo.org"
 twitter_username: synnefosoftware
 github_repo: grnet/synnefo
 google_id: 102978637446585725532
+author:
+  name: "Synnefo team"
+  email: "synnefo@googlegroups.com"
 
 # Build settings
 markdown: kramdown
